REGRESSION(r290175): ASSERTION FAILED: platformSample.type == PlatformSample::CMSampleBufferType while running webgl tests https://bugs.webkit.org/show_bug.cgi?id=236878

Add a missing hunk.
Unreviewed, TBR Eric Carlson.

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-19

* GPUProcess/media/RemoteVideoFrameObjectHeap.cpp:
(WebKit::RemoteVideoFrameObjectHeap::getVideoFrameBuffer):


Canonical link: https://commits.webkit.org/247531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290203 268f45cc-cd09-0410-ab3c-d52691b4dbfc